--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <button class="plusBtn">+</button>
+    <button class="plusBtn" onclick="alert('hello')">+</button>
 </body>
 </html>
