--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>some button idk</title>
+    <title>Discord Themed Button</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <button class="plusBtn" onclick="alert('hello')">+</button>
+    <button class="plusBtn" onclick="alert('This button was made by willycoffee!')">+</button>
 </body>
 </html>
